[gd_scene load_steps=57 format=3 uid="uid://cg555v7dexny3"]

[ext_resource type="Script" path="res://script/player/Miniboss.gd" id="1_loom4"]
[ext_resource type="Texture2D" uid="uid://kc7ttnv705f5" path="res://sprite-sheet/miniboss.png" id="1_v4xd5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sodaf"]
size = Vector2(66, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0grp"]
atlas = ExtResource("1_v4xd5")
region = Rect2(0, 576, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjb6f"]
atlas = ExtResource("1_v4xd5")
region = Rect2(208, 576, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujtkq"]
atlas = ExtResource("1_v4xd5")
region = Rect2(416, 576, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_yce6m"]
atlas = ExtResource("1_v4xd5")
region = Rect2(624, 576, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8kqq"]
atlas = ExtResource("1_v4xd5")
region = Rect2(832, 576, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmotc"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1040, 576, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgaco"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1248, 576, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_si0we"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1456, 576, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_52n66"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1664, 576, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt0mj"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1872, 576, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_nupxh"]
atlas = ExtResource("1_v4xd5")
region = Rect2(208, 864, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxs6t"]
atlas = ExtResource("1_v4xd5")
region = Rect2(416, 864, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ompw1"]
atlas = ExtResource("1_v4xd5")
region = Rect2(624, 864, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_6txlo"]
atlas = ExtResource("1_v4xd5")
region = Rect2(832, 864, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_15xd5"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1040, 864, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiqxh"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1248, 864, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qj46"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1456, 864, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_03rvy"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1664, 864, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4471"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1872, 864, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_44q7l"]
atlas = ExtResource("1_v4xd5")
region = Rect2(2080, 864, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_qad65"]
atlas = ExtResource("1_v4xd5")
region = Rect2(2288, 864, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp6et"]
atlas = ExtResource("1_v4xd5")
region = Rect2(0, 144, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qg41"]
atlas = ExtResource("1_v4xd5")
region = Rect2(208, 144, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gyiu"]
atlas = ExtResource("1_v4xd5")
region = Rect2(416, 144, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nlx0"]
atlas = ExtResource("1_v4xd5")
region = Rect2(624, 144, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_bogox"]
atlas = ExtResource("1_v4xd5")
region = Rect2(832, 144, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0ua6"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1040, 144, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xqvc"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1248, 144, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ovts"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1456, 144, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_422f3"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1664, 144, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc0a6"]
atlas = ExtResource("1_v4xd5")
region = Rect2(1872, 144, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo48a"]
atlas = ExtResource("1_v4xd5")
region = Rect2(416, 144, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_trhrk"]
atlas = ExtResource("1_v4xd5")
region = Rect2(0, 0, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0oyx"]
atlas = ExtResource("1_v4xd5")
region = Rect2(208, 0, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_54kq3"]
atlas = ExtResource("1_v4xd5")
region = Rect2(416, 0, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiau3"]
atlas = ExtResource("1_v4xd5")
region = Rect2(624, 0, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd8wp"]
atlas = ExtResource("1_v4xd5")
region = Rect2(832, 0, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxorb"]
atlas = ExtResource("1_v4xd5")
region = Rect2(0, 288, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_qejtt"]
atlas = ExtResource("1_v4xd5")
region = Rect2(208, 288, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1o1j"]
atlas = ExtResource("1_v4xd5")
region = Rect2(416, 288, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud46t"]
atlas = ExtResource("1_v4xd5")
region = Rect2(624, 288, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq0a2"]
atlas = ExtResource("1_v4xd5")
region = Rect2(0, 432, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_uex32"]
atlas = ExtResource("1_v4xd5")
region = Rect2(208, 432, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn7wb"]
atlas = ExtResource("1_v4xd5")
region = Rect2(416, 432, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc6mb"]
atlas = ExtResource("1_v4xd5")
region = Rect2(0, 288, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwjco"]
atlas = ExtResource("1_v4xd5")
region = Rect2(208, 288, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdla8"]
atlas = ExtResource("1_v4xd5")
region = Rect2(416, 288, 208, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_j87ee"]
atlas = ExtResource("1_v4xd5")
region = Rect2(624, 288, 208, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_57drj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0grp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjb6f")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_ujtkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yce6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8kqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmotc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgaco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si0we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52n66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt0mj")
}],
"loop": false,
"name": &"attack",
"speed": 14.0
}, {
"frames": [{
"duration": 1.2,
"texture": SubResource("AtlasTexture_nupxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxs6t")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_ompw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6txlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15xd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiqxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qj46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03rvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4471")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44q7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qad65")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"catch",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp6et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qg41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gyiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nlx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bogox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0ua6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xqvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ovts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_422f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc0a6")
}],
"loop": false,
"name": &"down",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo48a")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_trhrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0oyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54kq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiau3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd8wp")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxorb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qejtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1o1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud46t")
}],
"loop": true,
"name": &"pre-up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq0a2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uex32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn7wb")
}],
"loop": false,
"name": &"up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc6mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwjco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdla8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j87ee")
}],
"loop": true,
"name": &"wait_for_player",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3isj0"]
size = Vector2(98, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sqmhr"]
size = Vector2(52, 53)

[sub_resource type="CircleShape2D" id="CircleShape2D_7c870"]
radius = 1.54983

[sub_resource type="CircleShape2D" id="CircleShape2D_dhyag"]
radius = 32.0

[node name="Miniboss" type="CharacterBody2D"]
z_index = -1
collision_layer = 4
script = ExtResource("1_loom4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2, 14.5)
shape = SubResource("RectangleShape2D_sodaf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_57drj")
animation = &"catch"

[node name="CatchArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchArea"]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_3isj0")

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
modulate = Color(0.847059, 0.184314, 0.878431, 1)
position = Vector2(-49, 14.5)
shape = SubResource("RectangleShape2D_sqmhr")

[node name="NearArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="NearArea"]
modulate = Color(0, 0, 0.0117647, 1)
scale = Vector2(53.5542, -46.7112)
shape = SubResource("CircleShape2D_7c870")

[node name="AttackAreaUp" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreaUp"]
modulate = Color(0.588235, 0.698039, 0, 1)
position = Vector2(2, 9)
shape = SubResource("CircleShape2D_dhyag")

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HitRed" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="CatchArea" to="." method="_on_catch_area_body_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="area_entered" from="NearArea" to="." method="_on_near_area_area_entered"]
[connection signal="body_entered" from="NearArea" to="." method="_on_near_area_body_entered"]
[connection signal="body_exited" from="NearArea" to="." method="_on_near_area_body_exited"]
[connection signal="body_entered" from="AttackAreaUp" to="." method="_on_attack_area_up_body_entered"]
[connection signal="body_exited" from="AttackAreaUp" to="." method="_on_attack_area_up_body_exited"]
